# wasmtoolchain

./: .bazelrc  .clang-format  .gitattributes  .gitignore  LICENSE  README.md  WORKSPACE.bazel  update.ps1
dlmalloc/: BUILD.bazel  dlmalloc.c
lib/c/: BUILD.bazel
lib/c/include/: assert.h  features.h  limits.h  math.h  stddef.h  stdint.h  stdlib.h  string.h
lib/c/include/bits/: alltypes.h
lib/c/include/wasm/: export.h  import.h
lib/c/src/: abort.c  assert.c  exit.c  math.c  memcmp.c  memcpy.c  memmove.c  memset.c  multi3.c  strchr.c  strcmp.c  strlen.c
lib/cxx/: BUILD.bazel  VERSION
lib/cxx/include/: __config_site  __locale
lib/cxx/src/: cxx_hacks.cpp  hash.cpp  new.cpp
lib/dlmalloc/: BUILD.bazel  dlmalloc.c  malloc.c  sbrk.c  unistd.h
libc/: BUILD.bazel
libc/include/: malloc.h  stdbool.h  stdlib.h  string.h
libc/include/bits/: alltypes.h
libc/src/: strcpy.c
toolchain/: BUILD.bazel  BUILD.bazel.tpl  toolchain.bzl  toolchain.bzl.tpl
toolchain/lib/: VERSION
toolchain/linux-x86_64/: VERSION
toolchain/macos-x86_64/: VERSION  clang-14  lld  llvm-ar  wasm-as  wasm-dis  wasm-opt
toolchain/windows-x86_64/: VERSION
