cc_library(
    name = "c",
    srcs = [
        "src/abort.c",
        "src/exit.c",
        "src/memcmp.c",
        "src/memcpy.c",
        "src/memmove.c",
        "src/memset.c",
        "src/strcmp.c",
        "src/strcpy.c",
        "src/strlen.c",
        "src/wasm_import.h",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        ":hdrs",
        "//lib/dlmalloc",
    ],
)

cc_library(
    name = "hdrs",
    hdrs = glob(["include/**/*.h"]),
    includes = ["include"],
    visibility = ["//:__subpackages__"],
)
