cc_library(
    name = "cxx",
    srcs = [
        "src/string.cpp",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        ":hdrs",
        "//lib/c",
    ],
)

cc_library(
    name = "hdrs",
    hdrs = glob(["include/**/*"]),
    includes = ["include"],
    visibility = ["//:__subpackages__"],
)
