cc_library(
    name = "cxx",
    srcs = [
        "src/cxx_hacks.cpp",
        "src/new.cpp",
        "src/string.cpp",
    ],
    copts = [
        "-fno-rtti",
        "-fno-exceptions",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        ":hdrs",
        "//lib/c",
    ],
)

cc_library(
    name = "hdrs",
    hdrs = glob(["include/**/*"]),
    includes = ["include"],
    visibility = ["//:__subpackages__"],
)
